# django-poetry-docker

./: .env.example  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
boilerplate/: jwt_middleware.py  swagger_view.py  urls.py
boilerplate/settings/: __init__.py  base.py  cors.py  database.py  installed_apps.py  jwt.py  logger.py  smtp.py  swagger.py
